--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ Pygments==2.5.2
 pymongo==3.10.1
 pyparsing==2.4.2
 pytest==5.2.2
+pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
